@@ -30,6 +30,7 @@ dpkg (1.19.0) UNRELEASED; urgency=medium
       other modules.
     - Only load Term::ANSIColor from Dpkg::ErrorHandling if we are going to
       use colors, reducing the load time of many other modules.
+    - Do not execute code in Dpkg::ErrorHandling at import time.
   * Documentation:
     - Document currently accepted syntax for changelogs in deb-changelog(5).
       Closes: #858579
